<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"/>

    <Button
        android:id="@+id/myProfile"
        android:text="@string/my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Button for PeersProfiles -->
    <Button
        android:id="@+id/peersProfiles"
        android:text="@string/peers_profiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Button for MyEvents -->
    <Button
        android:id="@+id/my_events"
        android:text="@string/my_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Button for AddEvent -->
    <Button
        android:id="@+id/add_events"
        android:text="@string/add_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/goaltracker"
        android:id="@+id/goaltracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/logout"
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>